# disinter.py

./: .gitignore  README.md  main.py  pyproject.toml  test.py
disinter/: __init__.py  api.py  command.py  components.py  context.py  custom_types.py  disinter.py  errors.py  interaction.py  locales.py  response.py  types.py  utils.py
disinter/types/: __init__.py  api.py  channels.py  command.py  custom.py  etc.py  guild.py  interaction.py
docs/: README.md
examples/: README.md
examples/api/: getuser.py
examples/components/: main.py
examples/simple/: main.py
