[tool.poetry]
name = "disinter-py"
version = "0.1.0"
description = ""
authors = ["TheBoringDude <iamcoderx@gmail.com>"]
readme = "README.md"
packages = [{include = "disinter"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
requests = "^2.28.1"
discord-interactions = "^0.4.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
