[tool.poetry]
name = "disinter"
version = "0.0.2a0"
description = "A discord interactions library"
authors = ["TheBoringDude <iamcoderx@gmail.com>"]
readme = "README.md"
packages = [{include = "disinter"}]
repository = "https://github.com/TheBoringDude/disinter.py"
documentation = "https://github.com/TheBoringDude/disinter.py/tree/main/docs"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
requests = "^2.28.1"
discord-interactions = "^0.4.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
uvicorn = "^0.19.0"
mypy = "^0.982"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
